# tmc-hello-world

./: .gitignore  README.md
minimal/: CMakeLists.txt  build.sh
minimal/src/: main.cpp
recommended/: CMakeLists.txt  CMakePresets.json  build.sh
recommended/src/: tmc_build.cpp
recommended/src/hello_world/: main.cpp
recommended/src/hello_world_asio/: main.cpp
